--- a/latex/basic.tex
+++ b/latex/basic.tex
@@ -3,18 +3,9 @@
 \documentclass{standalone}
 
 \input{preamble.tex}
+\input{tikz_helpers.tex}
 
 \begin{document}
-
-% use of \tikzstyle is disencouraged, see
-% https://tex.stackexchange.com/questions/52372/should-tikzset-or-tikzstyle-be-used-to-define-tikz-styles
-\tikzset{vertex/.style={semithick, draw, black, fill=white, inner sep=0pt, minimum size=4.5mm}}
-\tikzset{eve/.style={vertex, circle}}
-\tikzset{adam/.style={vertex, rectangle}}
-
-\tikzset{my arrows/.style={->,shorten >=0.5pt,>={Stealth[round]},semithick}}
-\tikzset{win/.style={my arrows, color=cdblue}}
-\tikzset{other/.style={my arrows, black}}
 
 \begin{tikzpicture}
 	\foreach \x/\owner in {0/eve, 1/adam, 2/eve, 3/eve}{
@@ -25,15 +16,20 @@
 	}
 
 	\foreach \s/\t in {0/1, 1/2, 1/4, 2/6, 3/7, 4/5, 6/7}{
-		\draw (\s) edge [other] (\t);
+		\draw (\s) edge[other] (\t);
 	}
 	\foreach \s/\t in {4/0, 2/3, 3/2, 5/6, 6/5}{
 		\draw (\s) edge [other, bend left=20] (\t);
 	}
 
-	\draw (0) edge [other, bend left=20, win] (4);
-	\draw (5) edge [out=60, in=120, loop, win] ();
-	\draw (7) edge [out=330, in=30, loop, my arrows] ();
+	\draw (0) edge [win, bend left=20] (4);
+	\draw (5) edge [win, out=60, in=120, loop] ();
+	\draw (7) edge [other, out=330, in=30, loop] ();
+
+	\begin{pgfonlayer}{background}
+		\draw[highlight] \convexpath{0,5,4}{4mm};
+		\node[circle, highlight, minimum size=8.5mm] at (6) {};
+	\end{pgfonlayer}
 \end{tikzpicture}
 	
 \end{document}
