modularized preamble to work with paper AND beamer

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -17,12 +17,8 @@
 %\usepackage{url}
 % Einbindung von Bildern
 \usepackage{graphicx}
-% Bilder auf der Titelseite
-\usepackage{titlepic}
 % verbesserte floating-Objekte (z.B. figures/tables)
 \usepackage{float}
-% verbesserter Schriftsatz (nicht sichtbare Abweichungen)
-\usepackage[]{microtype}
 % kann erkennen, ob ein space gebraucht wird oder nicht (praktisch für newcommands)
 \usepackage{xspace}
 % verbesserte Tabellen
@@ -36,14 +32,8 @@
 \usepackage{subcaption}
 % Text in mehreren Spalten
 \usepackage{multicol}
-% Mehr Farben
-\usepackage[dvipsnames]{xcolor}
-% TU Dresden Farben
-\usepackage{tudscrcolor}
 % Lorem ipsum mit \blindtext
 \usepackage[]{blindtext}
-% Todos
-%\usepackage[colorinlistoftodos]{todonotes}
 % Ersetzt etwas durch nichts (debugging)
 \newcommand\hide[1]{}
 % Zitate
@@ -97,23 +87,6 @@
 \usepackage{siunitx}  
 %\sisetup{locale = DE}
 
-% ┌──────────────┐
-% │ Environments │
-% └──────────────┘
-\theoremstyle{definition}
-\newtheorem{definition}{Definition}[section]
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[theorem]
-
-\theoremstyle{remark}
-\newtheorem*{note}{Note}
-
-% ┌──────┐
-% │ tikz │
-% └──────┘
-\usepackage{tikz}
-
-%\tikzstyle{vertex}=[draw, fill=white, inner sep=0pt, minimum size=5mm]
 
 % ┌────────────┐
 % │ algorithms │
@@ -124,5 +97,38 @@
 %  ┌───────────┐
 %  │ sonstiges │
 %  └───────────┘
-\usepackage{hyperref}
-\usepackage[capitalise]{cleveref}
+% some packages dont work with the beamer class
+\makeatletter
+\@ifclassloaded{beamer}
+{
+	\usepackage{xcolor}
+	% TU Dresden Farben
+	\usepackage{tudscrcolor}
+}
+{
+	% Bilder auf der Titelseite
+	\usepackage{titlepic}
+	% verbesserter Schriftsatz (nicht sichtbare Abweichungen)
+	\usepackage[]{microtype}
+	% Mehr Farben
+	\usepackage[dvipsnames]{xcolor}
+	% TU Dresden Farben
+	\usepackage{tudscrcolor}
+	% Todos
+	\usepackage[colorinlistoftodos]{todonotes}
+	% ┌──────────────┐
+	% │ Environments │
+	% └──────────────┘
+	\theoremstyle{definition}
+	\newtheorem{definition}{Definition}[section]
+	\newtheorem{theorem}{Theorem}[section]
+	\newtheorem{corollary}{Corollary}[theorem]
+	
+	\theoremstyle{remark}
+	\newtheorem*{note}{Note}
+	% Referenzen
+	\usepackage{hyperref}
+	\usepackage[capitalise]{cleveref}
+}
+\makeatother
+
