--- a/latex/tikz_helpers.tex
+++ b/latex/tikz_helpers.tex
@@ -1,3 +1,8 @@
+% ┌──────┐
+% │ tikz │
+% └──────┘
+\usepackage{tikz}
+
 \usetikzlibrary{arrows.meta, automata, graphs, positioning, backgrounds, calc}
 
 % use of \tikzstyle is disencouraged, see
